--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,29 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.2 
+  google_maps_flutter: ^2.5.2
+  http: ^1.1.0
+  flutter_pagination: ^0.0.8
+  input_history_text_field: ^0.2.0
+  auto_size_text: ^3.0.0
+  ionicons: ^0.2.2
+  google_fonts: ^6.1.0
+  velocity_x: ^4.1.2
+  permission_handler: ^11.0.1
+  flutter_bloc: ^8.1.3
+  flutter_spinkit: ^5.2.0
+  cached_network_image: ^3.3.1
+  shared_preferences: ^2.2.2
+  pinput: ^3.0.1
+  nb_utils: ^6.1.0
+  dropdown_search: ^5.0.6
+  geolocator: ^10.1.0
+  get: ^4.6.5
+  awesome_dialog: ^3.2.0
+  page_transition: ^2.1.0
+  loading_animation_widget: ^1.2.0+4
+  
 
 dev_dependencies:
   flutter_test:
@@ -59,9 +81,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
